[package]
name = "pisays"
version = "0.1.0"
edition = "2021"
authors = ["Alexandra Iordache <iordachhe@proton.me>"]
description = "Components for communicating with various peripherals on RPi"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.7.5"
